syntax = "proto3";

package auth;

option go_package = "Auth-service/proto";

service AuthService {
  rpc Registration(RegisterRequest) returns (AuthResponse);
  rpc Login(LoginRequest) returns (AuthResponse);
}

message RegisterRequest {
  string full_name = 1;
  string email = 2;
  string password = 3;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message AuthResponse {
  string userID = 1;
  string token = 2;
}